[BEE-24623] Implement review comments

--- a/help/help.adoc
+++ b/help/help.adoc
@@ -8,7 +8,7 @@ Revised on May 18, 2020
 
 This plugin was developed and tested against Windows Azure 2012.
 
-{CD} minimum version 4.0
+{PRODUCT} minimum version 4.0
 
 [[Windows_Certificates]]
 == Working with Windows certificates
@@ -17,11 +17,11 @@ Azure procedures may require a Windows certificate to authenticate requests. To 
 
 . Generate an X.509 certificate using the Certificate Creation Tool (Makecert.exe) using the follow command:
 +
-``makecert -sky exchange -r -n "CN=<CertificateName>" -pe -a sha1 -len 2048 -ss My "D:/<CertificateName>.cer"``
+`makecert -sky exchange -r -n "CN=<CertificateName>" -pe -a sha1 -len 2048 -ss My "D:/<CertificateName>.cer"`
 +
-NOTE: Makecert.exe is included with Visual Studio and Windows SDK installations. For more information, see link:http://msdn.microsoft.com/en-us/library/bfsktky3(VS.80).aspx[Microsoft's Makecert.exe page].
+NOTE: Makecert.exe is included with Visual Studio and Windows SDK installations. For more information, refer to link:http://msdn.microsoft.com/en-us/library/bfsktky3(VS.80).aspx[Microsoft's Makecert.exe page].
 
-. To upload the Windows certificate to Windows Azure, see link:https://azure.microsoft.com/en-us/documentation/articles/cloud-services-configure-ssl-certificate/[How to Add a Management Certificate to a Windows Azure Subscription].
+. To upload the Windows certificate to Windows Azure, refer to link:https://azure.microsoft.com/en-us/documentation/articles/cloud-services-configure-ssl-certificate/[How to Add a Management Certificate to a Windows Azure Subscription].
 
 [[Plugin_Procedures]]
 == Plugin procedures
@@ -59,8 +59,6 @@ This plugin enables the following:
 * Resource management
 ** <<Teardown>>
 
-IMPORTANT: For all parameter descriptions below, required parameters are shown in [.required]#bold italics#.
-
 [[CreateConfiguration]]
 
 
@@ -70,11 +68,11 @@ IMPORTANT: For all parameter descriptions below, required parameters are shown i
 Plugin configurations are sets of parameters that apply across some or all of the plugin's procedures. They are intended to reduce repetition of common values, create predefined sets of parameters for end users, and to securely store credentials where needed. Each configuration is given a unique name that is entered in designated parameters on procedures that use them.
 
 
-Plugin configurations are created by going to the {CD} "Administration" tab, then to the "Plugins" sub-tab. On the right side of the line for the EC-Azure plugin, there is a "Configure" link which will open the Configuration page.
+Plugin configurations are created by going to the {PRODUCT} "Administration" tab, then to the "Plugins" sub-tab. On the right side of the line for the EC-Azure plugin, there is a "Configure" link which will open the Configuration page.
 
 Subscription ID must be created and an X.509 management certificate needs to be uploaded to the certificate store. You can do this using the https://www.windowsazure.com[Management Portal]
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration Name |Provide a unique name for the configuration, keeping in mind that you may need to create additional configurations over time. (Required)
@@ -87,7 +85,7 @@ Subscription ID must be created and an X.509 management certificate needs to be 
 |Debug Level: |Level for output: 0=errors only, 1=normal headers and responses, 2+=debugging information included. (Required)
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/configuration-panel.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/configuration-panel.png[image]
 
 
 
@@ -96,7 +94,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/configuration-panel.png[
 
 This procedure allows users to create or update the Database on a Database server.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -114,14 +112,14 @@ This procedure allows users to create or update the Database on a Database serve
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-database.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-database.png[image]
 
 [[Delete_Database]]
 === Delete database on server
 
 This procedure allows users to delete the Database on a Database server.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -131,7 +129,7 @@ This procedure allows users to delete the Database on a Database server.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-database.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[image]
 
 [[DeleteDatabase]]
 
@@ -141,7 +139,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-database.png[imag
 
 This procedure allows users to delete a database on a database server using Azure Services.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -151,7 +149,7 @@ This procedure allows users to delete a database on a database server using Azur
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-database.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[image]
 
 [[Create-or-Update-NetworkSecurityGroup]]
 
@@ -161,7 +159,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-database.png[imag
 
 This procedure allows users to create or update an Network Security Group.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -171,7 +169,7 @@ This procedure allows users to create or update an Network Security Group.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-network-security-group.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-network-security-group.png[image]
 
 [[Delete-NetworkSecurityGroup]]
 
@@ -181,7 +179,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-network
 
 This procedure allows users to delete a Network Security Group.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -190,7 +188,7 @@ This procedure allows users to delete a Network Security Group.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-network-security-group.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-security-group.png[image]
 
 [[Create-or-Update-NetworkSecurityRule]]
 
@@ -200,7 +198,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-network-security-
 
 This procedure allows users to create or update a Rule of an Network Security Group.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -219,7 +217,7 @@ This procedure allows users to create or update a Rule of an Network Security Gr
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-network-security-rule.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-network-security-rule.png[image]
 
 [[Delete-NetworkSecurityRule]]
 
@@ -229,7 +227,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-network
 
 This procedure allows users to delete a Rule from an existing Network Security Group.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -239,7 +237,7 @@ This procedure allows users to delete a Rule from an existing Network Security G
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-network-security-rule.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-security-rule.png[image]
 
 [[Create-or-Update-Subnet]]
 
@@ -249,7 +247,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-network-security-
 
 This procedure allows users to create or update a subnet.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -262,7 +260,7 @@ This procedure allows users to create or update a subnet.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-subnet.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-subnet.png[image]
 
 [[Delete-Subnet]]
 
@@ -272,7 +270,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create-or-update-subnet.
 
 This procedure allows users to delete a subnet.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -282,7 +280,7 @@ This procedure allows users to delete a subnet.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-subnet.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-subnet.png[image]
 
 
 [[CreateVnet]]
@@ -293,7 +291,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-subnet.png[image]
 
 This procedure allows users to create a Virtual Network using Azure Services.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -307,7 +305,7 @@ This procedure allows users to create a Virtual Network using Azure Services.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-vnet.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vnet.png[image]
 
 [[DeleteVnet]]
 
@@ -317,7 +315,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create-vnet.png[image]
 
 This procedure allows users to delete a Virtual Network using Azure Services.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -326,47 +324,58 @@ This procedure allows users to delete a Virtual Network using Azure Services.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-vnet.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vnet.png[image]
 
 [[CreateVM]]
 === CreateVM
 
 This procedure allows users to create a VM using Azure Services.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
 |Server Name |Name of the new Server. (Required)
 |Number of Instances |Number of instances to be created. (Required)
-|Image URN |The image URN in the form publisherName:offer:skus:version/ The source VHD link of a user image, e.g. https://foo.blob.core.windows.net/system/Microsoft.Compute/Images/vhds/snap-bar.vhd. (Required)
+|Image URN a|The image URN in the form publisherName:offer:skus:version/ The source VHD link of a user image. For example, `\https://foo.blob.core.windows.net/system/Microsoft.Compute/Images/vhds/snap-bar.vhd`.(Required)
 
-*Note: in order for user image to be accepted, it must belong to a storage account in same resource group as VM itself (this is Azure's requirement).*
+====
+NOTE: For your user image to be accepted, it must belong to a storage account in same resource group as VM itself (this is Azure's requirement).
+====
 |Is User Image? |Provided URN is of user image or not?
-|Disable Password Prompt? |Disable password authentication in case of super user privileges?
-|Public Key |Public key for authentication of created Virtual machine for the client[(1) ssh-keygen -t rsa -b 2048 (2) openssl req -x509 -key ~/.ssh/id_rsa -nodes -days 365 -newkey rsa:2048 -out public.pem].
+|Disable Password Prompt? |Disable password authentication in case of superuser privileges?
+|Public Key a|Public key for authentication of created Virtual machine for the client:
+
+* `ssh-keygen -t rsa -b 2048`
+
+* `openssl req -x509 -key ~/.ssh/id_rsa -nodes -days 365 -newkey rsa:2048 -out public.pem`
+
 |Operating System Type |Required only for user images.
 |Resource Group Name |The name of the resource group in which VM is to be created. (Required)
 |Location |Location of the resource. (Required)
-|Storage Account |Name of storage account. (Required)
+|Storage Account a|Name of storage account. (Required)
 
-If this storage account resides in a resource group different from VM itself, it must be specified via -rgn prefix argument, e.g. "-rgn ResourceGroupName StorageAccountName"
+If this storage account resides in a resource group different from VM itself, it must be specified via -rgn prefix argument.
+
+For example, `-rgn ResourceGroupName StorageAccountName`
 |Storage Container |Name of the storage container. (Required)
-|Virtual Network |Name of an existing Virtual Network for VM to be connected to.
+|Virtual Network a|Name of an existing Virtual Network for VM to be connected to.
 
-If this virtual network resides in a resource group different from VM itself, it must be specified via -rgn prefix argument, e.g. "-rgn ResourceGroupName VirtualNetworkName"
+If this virtual network resides in a resource group different from VM itself, it must be specified via -rgn prefix argument.
+
+For example, `-rgn ResourceGroupName VirtualNetworkName`
 |Subnet |Name of an existing subnet within a Virtual Network. Requires Virtual Network to be set.
 |Create Public IP Address? |Create Public IP address for the deployed servers?
-|Resource Pool |If you would like to add {CD} resources for each Azure instance being created, enter the resource pool name for the new resources. If left blank no resource will be created.
+|Resource Pool |If you would like to add {PRODUCT} resources for each Azure instance being created, enter the resource pool name for the new resources. If left blank no resource will be created.
 |Resource Port |If you specify a resource pool name in 'Resource Pool' field, this is the port that will be used when creating the resource. If no value is specified, port 7800 will be used by default when creating the resource.
 |Resource workspace |If you specify a resource pool name, this is the workspace that will be assigned to the created resources.
 |Resource Zone Name |Created resource will belong to the specified zone. Zone 'default' is used by default.
-|Machine size |Size of the machine, e.g. Standard_D2_v2, see https://docs.microsoft.com/en-us/azure/cloud-services/cloud-services-sizes-specs[Virtual machines sizes] for reference.
+|Machine size |Size of the machine. For example, Standard_D2_v2. Refer to link:https://docs.microsoft.com/en-us/azure/cloud-services/cloud-services-sizes-specs[Virtual machines sizes] for reference.
 |Results Location |Location where the output properties will be saved. If not specified, thsi will default to '/myJob/Azure/deployed'.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/create-vm.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vm.png[image]
 
 [[Start-VM]]
 
@@ -376,7 +385,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/create-vm.png[image]
 
 This procedure allows users to start a stopped VM.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -385,7 +394,7 @@ This procedure allows users to start a stopped VM.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/start-vm.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/start-vm.png[image]
 
 [[Restart-VM]]
 
@@ -395,7 +404,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/start-vm.png[image]
 
 This procedure allows users to restart a VM.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -404,7 +413,7 @@ This procedure allows users to restart a VM.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/restart-vm.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/restart-vm.png[image]
 
 
 
@@ -416,7 +425,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/restart-vm.png[image]
 
 This procedure allows users to stop a running VM.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -425,7 +434,7 @@ This procedure allows users to stop a running VM.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/stop-vm.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/stop-vm.png[image]
 
 [[Delete-VM]]
 
@@ -435,7 +444,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/stop-vm.png[image]
 
 This procedure allows users to delete a VM.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -444,14 +453,14 @@ This procedure allows users to delete a VM.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/delete-vm.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vm.png[image]
 
 [[SQL_Operations]]
 === SQL operations
 
 This procedure allows users to carry out operations on a database on a SQL Server.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Database Server |Name of the database server. (Required)
@@ -462,7 +471,7 @@ This procedure allows users to carry out operations on a database on a SQL Serve
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/sql-operations.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/sql-operations.png[image]
 
 [[NoSQL-Operations]]
 
@@ -472,7 +481,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/sql-operations.png[image
 
 This procedure allows users to carry out operations on NoSQL Database on a specified NoSQL Database Server.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
 |Storage Account |Storage account for table. (Required)
@@ -486,7 +495,7 @@ This procedure allows users to carry out operations on NoSQL Database on a speci
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/nosql-operations.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/nosql-operations.png[image]
 
 [[Teardown]]
 
@@ -496,14 +505,14 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/nosql-operations.png[ima
 
 This procedure allows users to delete resources recursively under a specified resource/resource pool in one attempt.
 
-[cols=",",options="header",]
+[cols="1,1",options="header",]
 |===
 |Parameter |Description
-|Resource/Resource Pool Name |The name of the {CD} resource or resource pool that need to be deleted. Precendence is given to resources to be deleted. Azure VMs attached to the resources will also be deleted. (Required)
+|Resource/Resource Pool Name |The name of the {PRODUCT} resource or resource pool that need to be deleted. Precendence is given to resources to be deleted. Azure VMs attached to the resources will also be deleted. (Required)
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
-image::cloudbees-common::cd-plugins/ec-azure/parameters/teardown.png[image]
+image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/teardown.png[image]
 
 [[rns]]
 == Release notes
@@ -514,7 +523,7 @@ image::cloudbees-common::cd-plugins/ec-azure/parameters/teardown.png[image]
 
 === EC-Azure 1.1.9
 
-* Renaming to "{CD}"
+* Renaming to "{PRODUCT}"
 
 === EC-Azure 1.1.8
 
