--- a/help/help.adoc
+++ b/help/help.adoc
@@ -21,7 +21,7 @@ Azure procedures may require a Windows certificate to authenticate requests. To 
 +
 NOTE: Makecert.exe is included with Visual Studio and Windows SDK installations. For more information, refer to link:http://msdn.microsoft.com/en-us/library/bfsktky3(VS.80).aspx[Microsoft's Makecert.exe page].
 
-. To upload the Windows certificate to Windows Azure, refer to link:https://azure.microsoft.com/en-us/documentation/articles/cloud-services-configure-ssl-certificate/[How to Add a Management Certificate to a Windows Azure Subscription].
+. To upload the Windows certificate to Windows Azure, refer to link:https://azure.microsoft.com/en-us/documentation/articles/cloud-services-configure-ssl-certificate/[Configuring TLS for an application in Azure].
 
 [[Plugin_Procedures]]
 == Plugin procedures
@@ -70,9 +70,9 @@ Plugin configurations are sets of parameters that apply across some or all of th
 
 Plugin configurations are created by going to the {PRODUCT} "Administration" tab, then to the "Plugins" sub-tab. On the right side of the line for the EC-Azure plugin, there is a "Configure" link which will open the Configuration page.
 
-Subscription ID must be created and an X.509 management certificate needs to be uploaded to the certificate store. You can do this using the https://www.windowsazure.com[Management Portal]
+Subscription ID must be created and an X.509 management certificate needs to be uploaded to the certificate store. You can do this using the link:https://www.windowsazure.com[Management Portal]
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration Name |Provide a unique name for the configuration, keeping in mind that you may need to create additional configurations over time. (Required)
@@ -94,7 +94,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/configuration-panel.
 
 This procedure allows users to create or update the Database on a Database server.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -119,7 +119,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-dat
 
 This procedure allows users to delete the Database on a Database server.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -139,7 +139,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[
 
 This procedure allows users to delete a database on a database server using Azure Services.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -157,9 +157,9 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[
 [[Create_or_Update_NetworkSecurityGroup]]
 === Create or update NetworkSecurityGroup
 
-This procedure allows users to create or update an Network Security Group.
+This procedure allows users to create or update a Network Security Group.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -179,7 +179,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-net
 
 This procedure allows users to delete a Network Security Group.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -198,7 +198,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-secur
 
 This procedure allows users to create or update a Rule of an Network Security Group.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -227,7 +227,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-net
 
 This procedure allows users to delete a Rule from an existing Network Security Group.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -247,7 +247,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-secur
 
 This procedure allows users to create or update a subnet.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -270,7 +270,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-sub
 
 This procedure allows users to delete a subnet.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -291,7 +291,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-subnet.png[im
 
 This procedure allows users to create a Virtual Network using Azure Services.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -315,7 +315,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vnet.png[imag
 
 This procedure allows users to delete a Virtual Network using Azure Services.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -331,7 +331,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vnet.png[imag
 
 This procedure allows users to create a VM using Azure Services.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -339,9 +339,8 @@ This procedure allows users to create a VM using Azure Services.
 |Number of Instances |Number of instances to be created. (Required)
 |Image URN a|The image URN in the form publisherName:offer:skus:version/ The source VHD link of a user image. For example, `\https://foo.blob.core.windows.net/system/Microsoft.Compute/Images/vhds/snap-bar.vhd`.(Required)
 
-====
 NOTE: For your user image to be accepted, it must belong to a storage account in same resource group as VM itself (this is Azure's requirement).
-====
+
 |Is User Image? |Provided URN is of user image or not?
 |Disable Password Prompt? |Disable password authentication in case of superuser privileges?
 |Public Key a|Public key for authentication of created Virtual machine for the client:
@@ -371,7 +370,7 @@ For example, `-rgn ResourceGroupName VirtualNetworkName`
 |Resource workspace |If you specify a resource pool name, this is the workspace that will be assigned to the created resources.
 |Resource Zone Name |Created resource will belong to the specified zone. Zone 'default' is used by default.
 |Machine size |Size of the machine. For example, Standard_D2_v2. Refer to link:https://docs.microsoft.com/en-us/azure/cloud-services/cloud-services-sizes-specs[Virtual machines sizes] for reference.
-|Results Location |Location where the output properties will be saved. If not specified, thsi will default to '/myJob/Azure/deployed'.
+|Results Location |Location where the output properties is saved. If not specified, this defaults to '/myJob/Azure/deployed'.
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
@@ -385,7 +384,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vm.png[image]
 
 This procedure allows users to start a stopped VM.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -404,7 +403,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/start-vm.png[image]
 
 This procedure allows users to restart a VM.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -425,7 +424,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/restart-vm.png[image
 
 This procedure allows users to stop a running VM.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -444,7 +443,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/stop-vm.png[image]
 
 This procedure allows users to delete a VM.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -460,7 +459,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vm.png[image]
 
 This procedure allows users to carry out operations on a database on a SQL Server.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Database Server |Name of the database server. (Required)
@@ -481,7 +480,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/sql-operations.png[i
 
 This procedure allows users to carry out operations on NoSQL Database on a specified NoSQL Database Server.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Storage Account |Storage account for table. (Required)
@@ -505,7 +504,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/nosql-operations.png
 
 This procedure allows users to delete resources recursively under a specified resource/resource pool in one attempt.
 
-[cols="1,1",options="header",]
+[cols=" 1a,1a",options="header",]
 |===
 |Parameter |Description
 |Resource/Resource Pool Name |The name of the {PRODUCT} resource or resource pool that need to be deleted. Precendence is given to resources to be deleted. Azure VMs attached to the resources will also be deleted. (Required)
