--- a/help/help.adoc
+++ b/help/help.adoc
@@ -72,7 +72,7 @@ Plugin configurations are created by going to the {PRODUCT} "Administration" tab
 
 Subscription ID must be created and an X.509 management certificate needs to be uploaded to the certificate store. You can do this using the link:https://www.windowsazure.com[Management Portal]
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration Name |Provide a unique name for the configuration, keeping in mind that you may need to create additional configurations over time. (Required)
@@ -94,7 +94,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/configuration-panel.
 
 This procedure allows users to create or update the Database on a Database server.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -119,7 +119,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-dat
 
 This procedure allows users to delete the Database on a Database server.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -139,7 +139,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[
 
 This procedure allows users to delete a database on a database server using Azure Services.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -159,7 +159,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-database.png[
 
 This procedure allows users to create or update a Network Security Group.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -179,7 +179,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-net
 
 This procedure allows users to delete a Network Security Group.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -196,9 +196,9 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-secur
 [[Create_or_Update_NetworkSecurityRule]]
 === Create or update NetworkSecurityRule
 
-This procedure allows users to create or update a Rule of an Network Security Group.
+This procedure allows users to create or update a Rule of a Network Security Group.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -227,7 +227,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-net
 
 This procedure allows users to delete a Rule from an existing Network Security Group.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -247,7 +247,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-network-secur
 
 This procedure allows users to create or update a subnet.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -270,7 +270,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-or-update-sub
 
 This procedure allows users to delete a subnet.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -291,7 +291,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-subnet.png[im
 
 This procedure allows users to create a Virtual Network using Azure Services.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -315,7 +315,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vnet.png[imag
 
 This procedure allows users to delete a Virtual Network using Azure Services.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -331,7 +331,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vnet.png[imag
 
 This procedure allows users to create a VM using Azure Services.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -384,7 +384,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/create-vm.png[image]
 
 This procedure allows users to start a stopped VM.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -403,7 +403,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/start-vm.png[image]
 
 This procedure allows users to restart a VM.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -424,7 +424,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/restart-vm.png[image
 
 This procedure allows users to stop a running VM.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -443,7 +443,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/stop-vm.png[image]
 
 This procedure allows users to delete a VM.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Configuration |The name of the configuration which holds all the connection information for Windows Azure. (Required)
@@ -459,7 +459,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/delete-vm.png[image]
 
 This procedure allows users to carry out operations on a database on a SQL Server.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Database Server |Name of the database server. (Required)
@@ -480,7 +480,7 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/sql-operations.png[i
 
 This procedure allows users to carry out operations on NoSQL Database on a specified NoSQL Database Server.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
 |Storage Account |Storage account for table. (Required)
@@ -504,10 +504,10 @@ image::cloudbees-common-sda::cd-plugins/ec-azure/parameters/nosql-operations.png
 
 This procedure allows users to delete resources recursively under a specified resource/resource pool in one attempt.
 
-[cols="1a,1a",options="header",]
+[cols="1a,1a",options="header"]
 |===
 |Parameter |Description
-|Resource/Resource Pool Name |The name of the {PRODUCT} resource or resource pool that need to be deleted. Precendence is given to resources to be deleted. Azure VMs attached to the resources will also be deleted. (Required)
+|Resource/Resource Pool Name |The name of the {PRODUCT} resource or resource pool that need to be deleted. Precedence is given to resources to be deleted. Azure VMs attached to the resources will also be deleted. (Required)
 |JobStep Timeout |Timeout for the step execution in minutes. Blank means no timeout.
 |===
 
